# Scrutator

./: .coverage  .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_environment.py
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: __init__.py  cli.py  export_bibtex.py  export_csv.py  export_obsidian.py  export_packager.py  export_ris.py  routes.py  telegram_bot.py  web_ui.py
config/: __init__.py  academic_sources.yaml  country_language_map.yaml  settings.yaml
core/: __init__.py  cache.py  citation_network.py  config.py  contradiction_detector.py  decorators.py  errors.py  feedback.py  filters.py  key_manager.py  logging.py  model_provider.py  paper_scorer.py  reporter.py  reporter_academic.py  research_agent.py  scorer.py  scraper.py  searcher.py  searcher_academic.py  stop_condition.py  synthesizer.py  translator.py
memory/: __init__.py  approval.py  compression.py  manager.py  recall.py  storage.py  types.py
tests/: __init__.py  test_cache.py  test_citation_network.py  test_contradiction_detector.py  test_decorators_and_errors.py  test_filters.py  test_full_text_and_caching.py  test_key_manager_and_exporters.py  test_memory.py  test_paper_scorer.py  test_production_hardening.py  test_progress_and_cancellation.py  test_research_agent.py  test_scorer.py  test_scraper.py  test_searcher.py  test_searcher_academic.py  test_security_routes.py  test_ssrf_protection.py  test_synthesizer.py  test_token_tracking_and_ui.py  test_translator.py
