[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrutator"
version = "0.1.0"
description = "Local-first, AI-powered research assistant for global, multilingual research."
readme = "README.md"
authors = [
    {name = "Scrutator Contributors", email = "you@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "gradio>=4.0.0",
    "click>=8.1.0",
    "python-telegram-bot>=20.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.3.0",
    "langdetect>=1.0.0",
    "structlog>=24.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
scrutator = "api.cli:cli"

[tool.setuptools.packages.find]
include = ["core*", "memory*", "api*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=core --cov=memory --cov-report=term --cov-report=html"
